src/test/ui/feature-gate-const-indexing.stderr
error[E0080]: constant evaluation error
  --> $DIR/feature-gate-const-indexing.rs:16:24
   |
LL |     const BLUB: [i32; (ARR[0] - 41) as usize] = [5]; //~ ERROR constant evaluation error
   |                        ^^^^^^ the index operation on const values is unstable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0080"
